[tool.poetry]
authors = ["widal001 <williamdaly422@gmail.com>"]
description = "Source code for the Cofundable API"
license = "MIT License"
name = "cofundable"
version = "0.1.0"

[tool.poetry.dependencies]
alembic = "^1.13.1"
dynaconf = "^3.2.4"
fastapi = "^0.109.1"
httpx = "^0.26.0"
python = ">=3.9,<4.0"
sqlalchemy = "^2.0.25"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
fastapi-pagination = "^0.12.15"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
liccheck = "^0.6.2"
mdformat = "^0.7.7"
mypy = "^1.8.0"
pre-commit = "^2.13.0"
pylint = "^3.0.3"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
ruff = "^0.2.0"
safety = "^2.3.5"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

# configures some basic black settings per this article:
# https://ljvmiranda921.github.io/notebook/2018/06/21/precommits-using-black-and-flake8/
[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.env
  | _build
  | buck-out
  | build
  | dist
  | env
)/
'''
include = '\.pyi?$'
line-length = 79
[tool.liccheck]
# Authorized and unauthorized licenses in LOWER CASE
authorized_licenses = [
  "bsd",
  "new bsd",
  "bsd license",
  "new bsd license",
  "simplified bsd",
  "apache",
  "apache 2.0",
  "apache license 2.0",
  "apache software license",
  "apache software",
  "gnu lgpl",
  "gnu lesser general public license v2 (lgplv2)",
  "gnu general public license v2 (gplv2)",
  "gnu library or lesser general public license (lgpl)",
  "lgpl with exceptions or zpl",
  "isc license",
  "isc license (iscl)",
  "mit",
  "mit license",
  "mozilla public license 2.0 (mpl 2.0)",
  "public domain",
  "python software foundation license",
  "python software foundation",
  "zpl 2.1",
  "gpl v3",
  "the unlicense (unlicense)",
]

# list any specifically unauthorized licenses here
unauthorized_licenses = []

[tool.pylint."MESSAGE CONTROL"]
disable = [
  "C0114", # Disables module docstrings
  "R0903", # Disables too few public methods
]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "dynaconf.*",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-safe-fixes = [
  "D400", # docstrings should end with a period
  "D415", # docstrings should end with a period, question mark, or exclamation point
]
ignore = [
  "ANN101", # missing type annotation for self
  "ANN102", # missing type annotation for cls
  "D203", # no blank line before class
  "D212", # multi-line summary first line
  "FA", # flake8-future-annotations ruleset
]
select = ["ALL"]
